[package]
name = "imgur_id7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.28.0", features = ["full", "rt-multi-thread"]}
tokio-util = "0.7.8"
reqwest = "0.11.17"
async-channel = "1.8.0"
rand = "0.8.5"
atomic-counter = "1.0.1"